removing gpu support for now, not using/available

--- a/Classifier/Dockerfile
+++ b/Classifier/Dockerfile
@@ -1,4 +1,7 @@
-FROM nvidia/cuda:11.4.2-devel-ubuntu18.04
+#FROM nvidia/cuda:11.4.2-devel-ubuntu18.04
+FROM python:3.8
+
+
 RUN apt-get update
 
 # install Python and pip
