forgot to rename in the docker yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
 #          devices:
 #            - capabilities: [ gpu ]
 #              driver: nvidia
-  cluster:
+  classifier:
     build: Classifier
     ports:
       - 8502:8502
