--- a/datavolume/information_retrieval_settings.json
+++ b/datavolume/information_retrieval_settings.json
@@ -67,7 +67,7 @@
       "haystack_endpoint": "http://haystack:8500/",
       "concept_extraction": "spar", // currently not providing other options
       "nearest_neighours": "yes", // simply yes no?
-      "pseudo_relevance_feedback" : "no" // `yes` or `no`
+      "pseudo_relevance_feedback" : "no", // `yes` or `no`
       "prf_weight": 0,
       "kg_weight": 0,
       "nn_weight": 2,
