adding vim to classifier and qe containers

--- a/QueryExpander/Dockerfile
+++ b/QueryExpander/Dockerfile
@@ -1,5 +1,7 @@
 FROM python:3.8
 
+RUN apt-get update
+RUN apt-get install vim -y
 COPY requirements.txt app/
 RUN python3 -m pip install -r ./app/requirements.txt
 
