--- a/datavolume/information_retrieval_settings.json
+++ b/datavolume/information_retrieval_settings.json
@@ -8,15 +8,15 @@
   "classifier_dir": "/data/classifier_data/",
   "IDF_path": "/data/classifier_data/IDF_values.json",
   "retrieval": {
-    "ner_url": "http://spar:8501/",
-    "classifier_url": "http://classifier:8502/",
+    "ner_url": "",               // set to empty "", "no" or "No" to avoid preprocessing labels
+    "classifier_url": "",  // set to empty "", "no" or "No" to avoid preprocessing neighbours
     "top_k": 10
   },
   "filtering": {
       "regex_filter": "yes", // Yes, Y, yes or y means the regex filter will run (recommended)
   },
   "indexing": {
-    "indexing_type": "hybrid", // `sparse`, `hybrid` or `dense`
+    "indexing_type": "sparse", // `sparse`, `hybrid` or `dense`
     "recreate_index":  true,
     "fields_to_index_and_weights": {
       "content": 2,
@@ -27,8 +27,8 @@
       "neighbours":  1.0
     },
     "sparse_settings": {
-      "type": "bm25f",  // bm25f with "bm25f", otherwise regular bm25
-      "index_name": "bm25f_",
+      "type": "bm25",  // bm25f with "bm25f", otherwise regular bm25
+      "index_name": "bm25",
       "recreate_index": true
     },
     "dense_settings": {
