--- a/datavolume/information_retrieval_settings.json
+++ b/datavolume/information_retrieval_settings.json
@@ -8,7 +8,7 @@
   "classifier_dir": "/data/classifier_data/",
   "IDF_path": "/data/classifier_data/IDF_values.json",
   "retrieval": {
-    "ner_url": "no", // set to empty "", "no" or "No" to avoid preprocessing labels
+    "ner_url": "http://spar:8501/", // set to empty "", "no" or "No" to avoid preprocessing labels; RESPONSIBLE FOR SPLITS
     "classifier_url": "",  // set to empty "", "no" or "No" to avoid preprocessing neighbours
     "top_k": 15
   },
@@ -20,15 +20,15 @@
     "fields_to_index_and_weights": {
       "content": 2,
       "doc_title":  1.0,
-      "NER_labels":  1.0,
-      "filtered_NER_labels":  1.0,
-      "filtered_NER_labels_domains":  1.0,
-      "neighbours":  1.0,
+      "NER_labels": 0,
+      "filtered_NER_labels":  0,
+      "filtered_NER_labels_domains":  0,
+      "neighbours":  0,
       "bm25_weight": 1
     },
     "sparse_settings": {
       "type": "bm25",  // bm25f with "bm25f", otherwise regular bm25
-      "index_name": "bm25",
+      "index_name": "bm25", // prefix for the index name, becomes [index_name]_[type]
       "recreate_sparse_index": true
     },
     "dense_settings": {
