running no_de dense

--- a/datavolume/information_retrieval_settings.json
+++ b/datavolume/information_retrieval_settings.json
@@ -29,10 +29,10 @@
     },
     "sparse_settings": {
       "type": "bm25",  // bm25f with "bm25f", otherwise regular bm25
-      "recreate_sparse_index": true
+      "recreate_sparse_index": false
     },
     "dense_settings": {
-      "recreate_dense_index":  false, // even if not recreating, reinitializing takes a lot of time
+      "recreate_dense_index":  true, // even if not recreating, reinitializing takes a lot of time
       "weigh_fields": true,
       "model_format": "transformers",
       "hidden_dims": 768,
