--- a/datavolume/information_retrieval_settings.json
+++ b/datavolume/information_retrieval_settings.json
@@ -8,31 +8,31 @@
   "classifier_dir": "/data/classifier_data/",
   "IDF_path": "/data/classifier_data/IDF_values.json",
   "retrieval": {
-    "ner_url": "http://spar:8501/", // set to empty "", "no" or "No" to avoid preprocessing labels; RESPONSIBLE FOR SPLITS
-    "classifier_url": "",  // set to empty "", "no" or "No" to avoid preprocessing neighbours
+    "ner_url": "http://spar:8501/", // RESPONSIBLE FOR SPLITS, set NER_labels weight to 0 to avoid preprocessing NER
+    "classifier_url": "http://classifier:8502/",  // set to empty "", "no" or "No" to avoid preprocessing neighbours
     "top_k": 15
   },
   "filtering": {
       "regex_filter": "yes", // Yes, Y, yes or y means the regex filter will run (recommended)
   },
   "indexing": {
-    "index_name": "no_DE", // prefix for the names of indices, becomes e.g. [index_name]_[type]
+    "index_name": "with_DE", // prefix for the names of indices, becomes e.g. [index_name]_[type]
     "indexing_type": "sparse", // `sparse`, `hybrid` or `dense`
     "fields_to_index_and_weights": {
       "content": 2,
       "doc_title":  1.0,
-      "NER_labels": 0,
-      "filtered_NER_labels":  0,
-      "filtered_NER_labels_domains":  0,
-      "neighbours":  0,
+      "NER_labels": 1,
+      "filtered_NER_labels":  1,
+      "filtered_NER_labels_domains":  1,
+      "neighbours":  1,
       "bm25_weight": 1
     },
     "sparse_settings": {
-      "type": "bm25",  // bm25f with "bm25f", otherwise regular bm25
+      "type": "bm25f",  // bm25f with "bm25f", otherwise regular bm25
       "recreate_sparse_index": false
     },
     "dense_settings": {
-      "recreate_dense_index":  true, // even if not recreating, reinitializing takes a lot of time
+      "recreate_dense_index":  false, // even if not recreating, reinitializing takes a lot of time
       "weigh_fields": true,
       "model_format": "transformers",
       "hidden_dims": 768,
@@ -68,8 +68,8 @@
       "haystack_url": "http://haystack:8500/",
       "concept_extraction": "spar", // currently not providing other options
       "nearest_neighours": "yes", // simply yes no?
-      "pseudo_relevance_feedback" : "no", // `yes` or `no`
-      "prf_weight": 0,
+      "pseudo_relevance_feedback" : "yes", // `yes` or `no`
+      "prf_weight": 1,
       "kg_weight": 2,
       "nn_weight": 1
   }
